# cmake

./: CMakeLists.txt  README.md
cplex/: CMakeLists.txt  FindCPLEX.cmake
mosek/: CMakeLists.txt  FindMOSEK.cmake
openmp/: CMakeLists.txt
