function(target_link_cplex TARGET_NAME)
    if (NOT CPLEX_FOUND)
        list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cplex")
        find_package(CPLEX REQUIRED)
        include_directories(${CPLEX_INCLUDE_DIRS})
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DIL_STD")
    endif()
    target_link_libraries(${TARGET_NAME} ${CPLEX_LIBRARIES} pthread)
endfunction()
