function(target_link_openmp TARGET_NAME)
    if (NOT OpenMP_CXX_FOUND)
        if (APPLE)
            set(CMAKE_C_COMPILER clang)
            set(CMAKE_CXX_COMPILER clang++)

            if(CMAKE_C_COMPILER_ID MATCHES "Clang\$")
                set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp")
                set(OpenMP_C_LIB_NAMES "omp")
                set(OpenMP_omp_LIBRARY omp)
            endif()

            if(CMAKE_CXX_COMPILER_ID MATCHES "Clang\$")
                set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp")
                set(OpenMP_CXX_LIB_NAMES "omp")
                set(OpenMP_omp_LIBRARY omp)
            endif()
        endif()
        find_package(OpenMP REQUIRED)
    endif()
    target_link_libraries(${TARGET_NAME} OpenMP::OpenMP_CXX)
endfunction()
